    memory links if using XML::DOM
 * Added method for caching all subjects. generate_views now uses these 
    which gives a notable speed up.
 * Added on_logout hook which is called when the login page is accessed
    which allows non-eprints login cookies to be hosed.
 
======================================================================
28/08/2007 - EPRINTS-3.0.3 (rc1)
======================================================================

2007-08-31 tmb
 * Fixed "for:value:relative:" autocomplete IDs not working under IE

2007-09-03 cjg
 * current_user now returns undef if working offline. Fixing #3091

2007-10-16 cjg
 * Fixed bug in date/time search.

2007-12-03 tdb
 * #3139, show deleted records in OAI output instead of just repeating the
    current data set 
 * Missing phrases from Admin -> Search Items -> Depositing User:
    lib/searchfield:desc_itemref_between, lib/searchfield:desc_itemref_orless
    and lib/searchfield:desc_itemref_ormore, fixing #3042
 * Use lastmod in OAI, allowing changes to live eprints to be propagated to
    harvesters (#3149)
 * Fixed bug with Simple Search not working in IE6/7 (#2975)
 * Will now use document directories from the last to the first (same behaviour
    as if disable_df is true) (#3142)
 * When logging in to access documents redirection now works as intended
    (#3140)

2007-12-03 cjg
 * Import IDs are removed unless import_ids is enabled.

2007-12-04 tdb
 * Don't use the directory from the XML import if enable_import_ids is
    specified
 * Allow enable_import_ids to be used with inbox/buffer/archive/deletion
 * Cleaned up some spelling errors, fixing #3141
 * Don't repeat validation warnings on the Deposit workflow screen, fixing
    #3133
 * Added missing EPrints_Dir_SecuredCGI and EPrints_Dir_Documents variables,
    fixing #2973

2007-12-05 cjg
 * Fixed some bugs in the VLit code.

2007-12-05 tdb
 * Cap the maximum message size at 40,000 bytes from Import, fixing #3067
